mtcnn训练方面的事情

--- a/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj.filters
+++ b/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj.filters
@@ -405,6 +405,12 @@
     <ClInclude Include="..\..\include\caffe\layers\continuation_indicator_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\mtcnn_data_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\mtcnn_euclidean_loss_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\caffe\layers\absval_layer.cpp">
@@ -767,6 +773,12 @@
     <ClCompile Include="..\..\src\caffe\layers\labelsequence_accuracy_layer.cpp">
       <Filter>src\layers</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\mtcnn_data_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\mtcnn_euclidean_loss_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\src\caffe\layers\absval_layer.cu">
@@ -1001,6 +1013,12 @@
       <Filter>src\3rdparty</Filter>
     </None>
     <None Include="..\..\src\caffe\layers\continuation_indicator_layer.cu">
+      <Filter>src\layers</Filter>
+    </None>
+    <None Include="..\..\src\caffe\layers\mtcnn_data_layer.cu">
+      <Filter>src\layers</Filter>
+    </None>
+    <None Include="..\..\src\caffe\layers\mtcnn_euclidean_loss_layer.cu">
       <Filter>src\layers</Filter>
     </None>
   </ItemGroup>
