--- a/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj
+++ b/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj
@@ -79,6 +79,8 @@
     <ClInclude Include="..\..\include\caffe\layers\lstm_common_layers.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\lstm_LSTM_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\memory_data_layer.hpp" />
+    <ClInclude Include="..\..\include\caffe\layers\mtcnn_data_layer.hpp" />
+    <ClInclude Include="..\..\include\caffe\layers\mtcnn_euclidean_loss_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\multibox_loss_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\multinomial_logistic_loss_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\mvn_layer.hpp" />
@@ -201,6 +203,8 @@
     <ClCompile Include="..\..\src\caffe\layers\lstm_LSTM_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\lstm_LSTM_unit_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\memory_data_layer.cpp" />
+    <ClCompile Include="..\..\src\caffe\layers\mtcnn_data_layer.cpp" />
+    <ClCompile Include="..\..\src\caffe\layers\mtcnn_euclidean_loss_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\multibox_loss_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\multinomial_logistic_loss_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\mvn_layer.cpp" />
@@ -307,6 +311,8 @@
     <None Include="..\..\src\caffe\layers\lrn_layer.cu" />
     <None Include="..\..\src\caffe\layers\lstm_layer.cu" />
     <None Include="..\..\src\caffe\layers\lstm_LSTM_unit_layer.cu" />
+    <None Include="..\..\src\caffe\layers\mtcnn_data_layer.cu" />
+    <None Include="..\..\src\caffe\layers\mtcnn_euclidean_loss_layer.cu" />
     <None Include="..\..\src\caffe\layers\mvn_layer.cu" />
     <None Include="..\..\src\caffe\layers\normalize_layer.cu" />
     <None Include="..\..\src\caffe\layers\permute_layer.cu" />
