--- a/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj.filters
+++ b/caffe-easy/windows-cpu/libcaffe/windows-cpu.vcxproj.filters
@@ -411,6 +411,12 @@
     <ClInclude Include="..\..\include\caffe\layers\mtcnn_euclidean_loss_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\st_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\st_loss_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\caffe\layers\absval_layer.cpp">
@@ -779,6 +785,12 @@
     <ClCompile Include="..\..\src\caffe\layers\mtcnn_euclidean_loss_layer.cpp">
       <Filter>src\layers</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\st_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\st_loss_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\src\caffe\layers\absval_layer.cu">
@@ -1019,6 +1031,12 @@
       <Filter>src\layers</Filter>
     </None>
     <None Include="..\..\src\caffe\layers\mtcnn_euclidean_loss_layer.cu">
+      <Filter>src\layers</Filter>
+    </None>
+    <None Include="..\..\src\caffe\layers\st_layer.cu">
+      <Filter>src\layers</Filter>
+    </None>
+    <None Include="..\..\src\caffe\layers\st_loss_layer.cu">
       <Filter>src\layers</Filter>
     </None>
   </ItemGroup>
